实现歌词切换

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <span></span>
       </div>
     </div>
-    <div class="panel">
+    <div class="panel panel1">
       <div class="panel-effect">
         <div class="effect">
           <div class="effect-1"></div>
@@ -43,11 +43,11 @@
     </div>
     <div class="footer">
       <div class="buttons">
-        <svg class="icon" aria-hidden="true"><use xlink:href="#icon-like"></use></svg>
-        <svg class="icon" aria-hidden="true"><use xlink:href="#icon-download"></use></svg>
-        <svg class="icon" aria-hidden="true"><use xlink:href="#icon-share"></use></svg>
-        <svg class="icon" aria-hidden="true"><use xlink:href="#icon-comment"></use></svg>
-        <svg class="icon" aria-hidden="true"><use xlink:href="#icon-more"></use></svg>
+        <svg class="icon btn-like" aria-hidden="true"><use xlink:href="#icon-like"></use></svg>
+        <svg class="icon btn-download" aria-hidden="true"><use xlink:href="#icon-download"></use></svg>
+        <svg class="icon btn-share" aria-hidden="true"><use xlink:href="#icon-share"></use></svg>
+        <svg class="icon btn-comment" aria-hidden="true"><use xlink:href="#icon-comment"></use></svg>
+        <svg class="icon btn-more" aria-hidden="true"><use xlink:href="#icon-more"></use></svg>
       </div>
       <div class="area-bar">
         <span class="time-start">00:00</span>
@@ -57,15 +57,16 @@
         </div>
       </div>
       <div class="actions">
-        <svg class="icon" aria-hidden="true"><use xlink:href="#icon-order"></use></svg>
-        <svg class="icon" aria-hidden="true"><use xlink:href="#icon-previous"></use></svg>
-        <svg class="icon play" aria-hidden="true"><use xlink:href="#icon-play"></use></svg>
-        <svg class="icon" aria-hidden="true"><use xlink:href="#icon-next"></use></svg>
-        <svg class="icon" aria-hidden="true"><use xlink:href="#icon-list"></use></svg>
+        <svg class="icon btn-order" aria-hidden="true"><use xlink:href="#icon-order"></use></svg>
+        <svg class="icon btn-pre" aria-hidden="true"><use xlink:href="#icon-previous"></use></svg>
+        <svg class="icon btn-play-pause pause" aria-hidden="true"><use xlink:href="#icon-play"></use></svg>
+        <svg class="icon btn-next" aria-hidden="true"><use xlink:href="#icon-next"></use></svg>
+        <svg class="icon btn-list" aria-hidden="true"><use xlink:href="#icon-list"></use></svg>
       </div>
     </div>
   </div>
   <script src="src/js/icons.js"></script>
+  <script src="src/js/index.js"></script>
 
 </body>
 </html>
