实现播放进度条

--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
           <div class="effect-3"></div>
         </div>
         <div class="lyrics">
-          <p class="current">那女孩对我说 说我保护她的梦 </p>
-          <p>说这个世界 对她这样的不多</p>
+          <p class="current"></p>
+          <p></p>
         </div>
       </div>
       <div class="panel-lyrics">
-        <div class="container"></div>
+        <div class="container">
+        </div>
       </div>
     </div>
     <div class="footer">
@@ -65,7 +66,6 @@
       </div>
     </div>
   </div>
-  <script src="src/js/icons.js"></script>
   <script src="src/js/index.js"></script>
 
 </body>
